Truncate long phone numbers to prevent overflow

--- a/index.css
+++ b/index.css
@@ -20,11 +20,12 @@ html {
 .dialer-result {
   background: #2c3743;
   color: #fff;
-  font-size: 40px;
+  font-size: 32px;
   line-height: 80px;
   height: 80px;
-  padding: 0 20px;
+  padding: 0 70px 0 20px;
 }
+
 .dialer-delete {
   background: url(assets/sprite-a.y.png) 0 0 no-repeat;
   display: block;
